Feat: "추가 SECRET_KEY"

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
   servlet:
     multipart:
       enabled: true
+  jwt:
+    secret: "d#nbwj2r^sqlyn=%hiq-nbi9wd88*%@l%+^a5&+$w*gq*1prnz"
 
 logging:
   level:
