Feat: "추가 main, test 설정 파일 분리"

--- a/core/src/test/resources/application.yml
+++ b/core/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: local
+    active: test
   datasource:
     url: jdbc:h2:tcp://localhost/~/core;
     username: sa
@@ -18,12 +18,6 @@ spring:
       enabled: true
   jwt:
     secret: "d#nbwj2r^sqlyn=%hiq-nbi9wd88*%@l%+^a5&+$w*gq*1prnz"
-
-logging:
-  level:
-    org.hibernate.SQL: debug
-    org.springframework: debug
-    org.springframework.web: debug
 
 file:
   dir: "/Users/piaochung/Documents/GitHub/backend/file/"
